--- a/src/Sunshine.UWP.csproj
+++ b/src/Sunshine.UWP.csproj
@@ -97,8 +97,12 @@
     </Compile>
     <Compile Include="Converters\DataExtensoConverter.cs" />
     <Compile Include="Converters\IconeStatusConverter.cs" />
+    <Compile Include="Models\Constantes.cs" />
+    <Compile Include="Models\JSONObject.cs" />
     <Compile Include="Models\Previsao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ApiService.cs" />
+    <Compile Include="Services\IApiService.cs" />
     <Compile Include="ViewModels\Design\MainPageDesignViewModel.cs" />
     <Compile Include="ViewModels\MainPageViewModel.cs" />
     <Compile Include="Views\DetailsPage.xaml.cs">
@@ -112,6 +116,7 @@
     <AppxManifest Include="Package.appxmanifest">
       <SubType>Designer</SubType>
     </AppxManifest>
+    <PRIResource Include="Strings\pt-BR\Resources.resw" />
     <None Include="Sunshine.UWP_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
