--- a/src/project.json
+++ b/src/project.json
@@ -1,6 +1,7 @@
 ﻿{
   "dependencies": {
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.2.2",
+    "Newtonsoft.Json": "9.0.1",
     "Prism.Unity": "6.2.0",
     "Prism.Windows": "6.0.2"
   },
